# NexFlow

./: .env.example  .firebaserc  .gitignore  .npmrc  CONTRIBUTING.md  Plan.md  README.md  architecture_blueprint.md  backend_implementation_phase_2.md  docker-compose.yml  firebase.json  frontend_and_ai_phase_4.md  frontend_layout.jsx  helpdesk_service.py  implementation_phase_1.md  infrastructure_setup_phase_3.md  package-lock.json  package.json  work_item_models.py
.github/workflows/: ci.yml
.turbo/cache/: 0b614a50ce3a2f6c-manifest.json  0b614a50ce3a2f6c-meta.json  0b614a50ce3a2f6c.tar.zst  5be08714c74b7715-manifest.json  5be08714c74b7715-meta.json  5be08714c74b7715.tar.zst  6677215ed4148da8-manifest.json  6677215ed4148da8-meta.json  b458f1ffdfc3c909-manifest.json  b458f1ffdfc3c909-meta.json  b458f1ffdfc3c909.tar.zst
apps/customer-portal/: index.html  package.json  vite.config.ts
apps/database/: seed.sql
apps/gateway/: nginx.conf
apps/web-app/: next.config.ts  package-lock.json  package.json
functions/: package-lock.json
services/ai-orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai-orchestrator/src/: __init__.py  config.py  llm.py  main.py  models.py  redis_client.py  triage_worker.py  updates_publisher.py
services/ai-orchestrator/tests/: test_config.py  test_models.py
services/asset-service/: Dockerfile  eslint.config.mjs  package.json
services/auth-service/: Dockerfile  package.json
services/helpdesk-service/: .env.example  Dockerfile  package.json
services/integration-service/: Dockerfile  package.json
(+135 files in other folders)
