[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI Triage Orchestrator for NexFlow"
authors = [
    {name = "NexFlow", email = "dev@nexflow.io"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis[asyncio]>=5.0.0",
    "openai>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0"
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pytest-mock>=3.14.0"
]
